--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,12 @@ chrono = "0.4"
 clap = { version = "3.1.18", features = ["derive"] }
 clokwerk = "0.4.0-rc1"
 displaydoc = "0.2"
+parking_lot = "0.12.0"
 queues = "1.1.0"
 secp256k1-zkp = { version = "0.6.0", features = ["bitcoin_hashes", "rand-std"] }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 sled = "0.34"
 thiserror = "1.0.31"
-time = "0.3.9"
+time = { version = "0.3.9", features = ["formatting"] }
 tokio = { version = "1.18.2", features = ["full"] }
