--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ clokwerk = "0.4.0-rc1"
 displaydoc = "0.2"
 parking_lot = "0.12.0"
 queues = "1.1.0"
+secp256k1-sys = "0.5.2"
 secp256k1-zkp = { version = "0.6.0", features = ["bitcoin_hashes", "rand-std"] }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
