--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,15 @@ edition = "2021"
 [dependencies]
 actix-web = "4.0.1"
 anyhow = "1.0.57"
+async-trait = "0.1.53"
 chrono = "0.4"
 clap = { version = "3.1.18", features = ["derive"] }
 clokwerk = "0.4.0-rc1"
 displaydoc = "0.2"
+futures = "0.3.21"
 parking_lot = "0.12.0"
 queues = "1.1.0"
+reqwest = { version = "0.11.10", features = ["json"] }
 secp256k1-sys = "0.5.2"
 secp256k1-zkp = { version = "0.6.0", features = ["bitcoin_hashes", "rand-std"] }
 serde = { version = "1.0.137", features = ["derive"] }
