--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,16 @@ chrono = "0.4"
 clap = { version = "3.1.18", features = ["derive"] }
 clokwerk = "0.4.0-rc1"
 displaydoc = "0.2"
+dlc-messages = { git = "https://github.com/p2pderivatives/rust-dlc" }
 futures = "0.3.21"
+hex = "0.4"
+lightning = "0.0.106"
 parking_lot = "0.12.0"
 queues = "1.1.0"
 reqwest = { version = "0.11.10", features = ["json"] }
 secp256k1-sys = "0.5.2"
 secp256k1-zkp = { version = "0.6.0", features = ["bitcoin_hashes", "rand-std"] }
+secp256k1-zkp-5 = { package = "secp256k1-zkp", version = "0.5" }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 sled = "0.34"
