--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,11 @@ clap = { version = "3.1.18", features = ["derive"] }
 clokwerk = "0.4.0-rc1"
 displaydoc = "0.2"
 dlc-messages = { git = "https://github.com/p2pderivatives/rust-dlc" }
+env_logger = "0.9.0"
 futures = "0.3.21"
 hex = "0.4"
 lightning = "0.0.106"
+log = "0.4.17"
 parking_lot = "0.12.0"
 queues = "1.1.0"
 reqwest = { version = "0.11.10", features = ["json"] }
