--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Setup toolchain
+      run: rustup override set stable
+    - name: Cache dependencies
+      uses: Swatinem/rust-cache@v1
     - name: Build
       run: cargo build --verbose
     - name: Run tests
