--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+test-feed = []
+
 [dependencies]
 actix-web = "4.0.1"
 anyhow = "1.0.57"
