--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: dsmaxds/sibyls:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME}}/sibyls:latest
 
       - name: Image digest
         run: echo ${{ steps.build-and-push.outputs.digest }}
