updated docker image flow to use ghcr

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,38 +1,53 @@
-name: Build and Push Docker Image
+#
+name: Create and publish a Docker image
 
 on:
   push:
-    branches:
-      - master 
+    tags:
+      - v*
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build:
+  build-and-push-image:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+       
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
+      
+      - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Step to get the short SHA of the commit
-      - name: Get the commit hash
-        id: vars
-        run: echo "::set-output name=sha::$(git rev-parse --short HEAD)"
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      # Publish the image under 'latest' as well as the commit hash
-      - name: Build and Push Docker image
+      - name: Build and push Docker image
+        id: push
         uses: docker/build-push-action@v5
         with:
+          context: .
           push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME}}/sibyls:latest
-            ${{ secrets.DOCKERHUB_USERNAME}}/sibyls:${{ steps.vars.outputs.sha }}
-
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+      
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
+      
