--- a/sibyls-keygen/Cargo.toml
+++ b/sibyls-keygen/Cargo.toml
@@ -6,7 +6,6 @@ include = ["src/main.rs", "README.md"]
 
 [dependencies]
 clap = { version = "4.0", features = ["derive", "string", "env"] }
-hex = "0.4"
-secp256k1 = { version = "0.29", features = ["rand"] }
+secp256k1 = { version = "0.29", features = ["rand-std"] }
 log = "0.4"
 env_logger = "0.9"
